minor overflow bug fix in screen 1 mobile

--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ body {
     color: red;
     margin-bottom: 12px;
     margin-left: 10px;
+    cursor: pointer;
 }
 
 .quizzes {
@@ -141,6 +142,8 @@ body {
     padding: 0 0 15px 15px;
     background-image: linear-gradient(to bottom, rgb(0, 0, 0, 0), rgb(0, 0, 0, 1));
     border-radius: 5px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .top-your-quizzes {
@@ -1060,6 +1063,6 @@ input {
         cursor: pointer;
     }
 
-    /* =============================================================================*/
+    /* ============== SCREEN 3 RESPONSIVIDADE ==================*/
     
   }
